<resources>
    <string name="app_name">QUIZ SHOWDOWN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="displayname">displayname</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="f1_quiz_game">QUIZ SHOWDOWN</string>
    <string name="signup">SIGNUP</string>
    <string name="email2">email</string>
    <string name="f1_quiz_game2">QUIZ SHOWDOWN</string>
    <string name="win">WIN</string>
    <string name="loss">LOSS</string>
    <string name="draw">DRAW</string>
</resources>