<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ptyxiakh_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="129dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/file" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="223dp"
        android:layout_height="36dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/baseline_abc_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="464dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/round_account_box_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/displayname"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/black"
        android:onClick="signUp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/hammersmith_one"
        android:text="@string/f1_quiz_game"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="goTosignIn"
        android:text="@string/already_have_an_account_sign_in"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>