<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_gradient"
    tools:context=".Signin_up">
    <ImageView
        android:id="@+id/decor_top_right"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_decorative_pattern"
        android:tint="#40D4AF37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/decor_bottom_left"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_decorative_pattern"
        android:tint="#20D4AF37"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseAppTint" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="223dp"
        android:layout_height="36dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/baseline_abc_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="464dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/round_account_box_24"
        android:drawablePadding="15px"
        android:ems="10"
        android:hint="@string/displayname"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/button_pressed"
        android:onClick="signUp"
        android:text="@string/signup"
        style="@style/GameMenuButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/signin"
        style="@style/GameMenuButton"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/button_pressed"
        android:onClick="signIn"
        android:text="sign in"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.05"
        android:text="QUIZ SHOWDOWN"
        android:textColor="#D4AF37"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="goTosignIn"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/accent_gold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:onClick="goTosignUp"
        android:text="Dont have an account?Sign up!"
        android:textColor="@color/accent_gold"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>